feat: week report 1

--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
 
       <a href="contact.html"> <h3>ช่องทางการติดต่อ</h3></a>
       <hr />
+      <a href="weekReport-1.html"><h3>Week Report-1</h3></a>
       <h3>ทักษะความสามารถ Skill</h3>
       ⭐⭐⭐⭐⭐⭐
     </div>
