update : css styles home, contact, week1

--- a/index.html
+++ b/index.html
@@ -1,69 +1,69 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="UTF-8" />
-    <title>This is Thawatchai Buachan</title>
-    <link rel="stylesheet" href="index.css" />
-    <base href="index.html" />
-  </head>
-  <body class="body-index">
-    <div class="app">
-      <div class="header-c1">
-        <table>
-          <tr class="tr-photome">
-            <td>
-              <img
-                class="photome"
-                src="https://scontent.fbkk5-3.fna.fbcdn.net/v/t1.6435-9/118604467_2692252774319912_4976363662842204685_n.jpg?_nc_cat=111&ccb=1-7&_nc_sid=174925&_nc_eui2=AeEWWWH6tPFYDduroB3mzLAVzL9B4DZxH_vMv0HgNnEf-1OEO63QezRZadsAGbwKy6QBD2507wlnEbtjBC7ApxLz&_nc_ohc=77A_EGOwJZMAX8A7YHZ&_nc_ht=scontent.fbkk5-3.fna&oh=00_AT8UAj7bJMEM4PuW9dH48uN0-99dD7R9N7fOpr8aCa0qBg&oe=63507A69"
-                alt="Thawatchai Buachan at PIM"
-                width="250"
-                height="250"
-              />
-            </td>
-            <td class="infome">
-              <h1>ธวัชชัย บัวจันทร์</h1>
-              <p><em>สาขาวิศวกรรมคอมพิวเตอร์และปัญญาประดิษฐ์</em></p>
-              <p>คณะวิศวกรรมกรรมศาสตร์และเทคโนโลยี</p>
-              <p>
-                <strong
-                  ><a href="http://www.pim.ac.th"
-                    >สถาบันการจัดการปัญญาภิวัฒน์</a
-                  ></strong
-                >
-              </p>
-              ผมชื่อ ธวัชชัย บัวจันทร์ มีชื่อเล่นว่าดิว
-              <br />
-            </td>
-          </tr>
-        </table>
-      </div>
-      <hr />
-      <div class="header-c1">
-        <h3>ประสบการณ์การทำงาน</h3>
-        <table style="width: 60%;">
-          <thead>
-            <tr class="work">
-              <th style="text-align: center;">Year</th>
-              <th style="text-align: center;">Work Place</th>
-            </tr>
-          </thead>
-          <tr class="work">
-            <td>2021-12 - 2022-05</td>
-            <td>Nernturbo NTBX</td>
-          </tr>
-          <tr class="work">
-            <td>2022-06 - 2022-08</td>
-            <td>7-11</td>
-          </tr>
-        </table>
-      </div>
-      <hr />
+<html lang="en">
 
-      <a href="contact.html"> <h3>ช่องทางการติดต่อ</h3></a>
-      <hr />
-      <a href="weekReport-1.html"><h3>Week Report-1</h3></a>
-      <h3>ทักษะความสามารถ Skill</h3>
-      ⭐⭐⭐⭐⭐⭐
+<head>
+  <meta charset="UTF-8" />
+  <title>This is Thawatchai Buachan</title>
+  <link rel="stylesheet" href="css/app.css">
+  <link rel="stylesheet" href="index.css" />
+  <link rel="stylesheet" href="css/button.css">
+  <base href="index.html" />
+</head>
+
+<body class="body-index">
+  <div class="app">
+    <div class="header-c1">
+      <div class="infome">
+        <img class="photome"
+          src="https://scontent.fbkk5-3.fna.fbcdn.net/v/t1.6435-9/118604467_2692252774319912_4976363662842204685_n.jpg?_nc_cat=111&ccb=1-7&_nc_sid=174925&_nc_eui2=AeEWWWH6tPFYDduroB3mzLAVzL9B4DZxH_vMv0HgNnEf-1OEO63QezRZadsAGbwKy6QBD2507wlnEbtjBC7ApxLz&_nc_ohc=77A_EGOwJZMAX8A7YHZ&_nc_ht=scontent.fbkk5-3.fna&oh=00_AT8UAj7bJMEM4PuW9dH48uN0-99dD7R9N7fOpr8aCa0qBg&oe=63507A69"
+          alt="Thawatchai Buachan at PIM" width="250" height="250" />
+        <div class="description-me">
+          <h1>ธวัชชัย บัวจันทร์</h1>
+          <p><em>สาขาวิศวกรรมคอมพิวเตอร์และปัญญาประดิษฐ์</em></p>
+          <p>คณะวิศวกรรมกรรมศาสตร์และเทคโนโลยี</p>
+          <p>
+            <strong><a href="http://www.pim.ac.th">สถาบันการจัดการปัญญาภิวัฒน์</a></strong>
+          </p>
+        </div>
+      </div>
+      <p>ผมชื่อ ธวัชชัย บัวจันทร์ มีชื่อเล่นว่าดิว</p>
     </div>
-  </body>
+    <hr />
+    <div class="header-c1">
+      <h3>ประสบการณ์การทำงาน</h3>
+      <table style="width: 60%;" aria-describedby="Table work">
+        <thead>
+          <tr class="work">
+            <th style="text-align: center;">Year</th>
+            <th style="text-align: center;">Work Place</th>
+          </tr>
+        </thead>
+        <tr class="work">
+          <td>2021-12 - 2022-05</td>
+          <td>Nernturbo NTBX</td>
+        </tr>
+        <tr class="work">
+          <td>2022-06 - 2022-08</td>
+          <td>7-11</td>
+        </tr>
+      </table>
+    </div>
+    <hr />
+    <div class="bigbutton">
+      <a href="contact.html">
+        <h3>ช่องทางการติดต่อ</h3>
+      </a>
+    </div>
+    <hr />
+    <div class="bigbutton">
+      <a href="weekReport-1.html">
+        <h3>Week Report-1</h3>
+      </a>
+    </div>
+    <h3>ทักษะความสามารถ Skill</h3>
+    ⭐⭐⭐⭐⭐⭐
+  </div>
+</body>
+
+
 </html>
