--- a/weekReport-1.html
+++ b/weekReport-1.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="utf-8">
     <title>weekReport-1</title>
+    <link rel="stylesheet" href="css/button.css">
 </head>
 
 <body>
@@ -67,7 +68,9 @@
             </tbody>
         </table>
         <hr>
-        <h2><a href="index.html">Home</a></h2>
+        <div class="bigbutton">
+            <a href="index.html"><h3>Home</h3></a>
+        </div>
     </div>
 </body>
 
