--- a/contact.html
+++ b/contact.html
@@ -1,29 +1,39 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <meta charset="utf-8">
     <title>Contact</title>
-    <link rel="stylesheet" href="contact.css">
+    <link rel="stylesheet" href="css/app.css">
+    <link rel="stylesheet" href="css/contact.css">
+    <link rel="stylesheet" href="css/button.css">
   </head>
-  <body>
-    <h2><a href="index.html">Home</a></h2>
-    <h3>ช่องทางการติดต่อ</h3>
-    <ul>
-      <h4>
-        <li class="facebook"><a href="https://www.facebook.com/diwwer2001/">Facebook</a></li>
-        <li class='line'><a href="http://line.me/ti/p/~diwwer.ggg">Line</a></li>
-      </h4>
-    </ul>
-    <hr>
-    <h3>ติดต่อฉัน</h3>
-        <form class="" action="mailto:tawatchaibuajun@gmail.com" method="post" >
-        <label>Name:</label>
-        <input type="text" name="name_surname" value=""><br>
-        <label>E-mail:</label>
-        <input type="email" name="email" value=""><br>
-        <label>ข้อความที่ต้องการส่ง:</label><br>
-        <textarea name="message" rows="8" cols="80"></textarea><br>
-        <input type="submit" name="" >
-      </form>
+  <body class="body-index">
+    <div class="app">
+      <div class="bigbutton">
+        <a href="index.html">
+          <h3>Home</h3>
+        </a>
+      </div>
+      <div class="detail">
+        <h3>ช่องทางการติดต่อ</h3>
+        <ul>
+          <h4>
+            <li class="facebook"><a href="https://www.facebook.com/diwwer2001/">Facebook</a></li>
+            <li class='line'><a href="http://line.me/ti/p/~diwwer.ggg">Line</a></li>
+          </h4>
+        </ul>
+        <hr>
+        <h3>ติดต่อฉัน</h3>
+            <form class="" action="mailto:tawatchaibuajun@gmail.com" method="post" >
+            <label>Name:</label>
+            <input type="text" name="name_surname" value=""><br>
+            <label>E-mail:</label>
+            <input type="email" name="email" value=""><br>
+            <label>ข้อความที่ต้องการส่ง:</label><br>
+            <textarea name="message" rows="8" cols="80"></textarea><br>
+            <input class="button-submit" type="submit" name="" >
+          </form>
+      </div>
+    </div>
   </body>
 </html>
