--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="css/app.css">
   <link rel="stylesheet" href="index.css" />
   <link rel="stylesheet" href="css/button.css">
+  <link type="image/png" sizes="96x96" rel="icon" href="https://img.icons8.com/nolan/96/home.png">
   <base href="index.html" />
 </head>
 
