feat: add navbar

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <title>This is Thawatchai Buachan</title>
   <link rel="stylesheet" href="css/container.css">
   <link rel="stylesheet" href="index.css" />
+  <link rel="stylesheet" href="css/navbar.css">
   <link rel="stylesheet" href="css/button.css">
   <link type="image/png" sizes="96x96" rel="icon" href="https://img.icons8.com/nolan/96/home.png">
   <base href="index.html" />
@@ -13,6 +14,14 @@
 </head>
 
 <body class="body-index">
+  <navbar>
+    <h1>Thawatchai Buachan</h1>
+    <nav>
+        <a href="index.html">Home</a>
+        <a href="contact.html">Contact</a>
+        <div class="animation start-home"/>
+    </nav>
+</navbar>
   <div class="container">
     <section aria-details="myself">
       <div class="block-content">
@@ -69,15 +78,15 @@
               </thead>
               <tr>
                 <td><em class="fa-brands fa-css3-alt"> </em>CSS</td>
-                <td>Intermediate ★  ★  ★  ★  </td>
+                <td>Intermediate ★ ★ ★ ★ </td>
               </tr>
               <tr>
                 <td><em class="fa-brands fa-square-js"> </em>JavaScript</td>
-                <td>Intermediate ✭  ✭  ✭  ✭  </td>
+                <td>Intermediate ✭ ✭ ✭ ✭ </td>
               </tr>
               <tr>
                 <td><em class="fa-brands fa-html5"> </em>HTML</td>
-                <td>Intermediate ✫  ✫  ✫  ✫  </td>
+                <td>Intermediate ✫ ✫ ✫ ✫ </td>
               </tr>
             </table>
           </div>
@@ -91,15 +100,15 @@
               </thead>
               <tr>
                 <td><em class="fa-brands fa-react"> </em>React</td>
-                <td>Intermediate   ★  ★  ★  ★  </td>
+                <td>Intermediate ★ ★ ★ ★ </td>
               </tr>
               <tr>
                 <td>JavaSpringBoot</td>
-                <td>Intermediate   ✭  ✭  ✭  ✭  </td>
+                <td>Intermediate ✭ ✭ ✭ ✭ </td>
               </tr>
               <tr>
                 <td><em class="fa-brands fa-python"> </em>Python</td>
-                <td>Intermediate   ✫  ✫  ✫  ✫  </td>
+                <td>Intermediate ✫ ✫ ✫ ✫ </td>
               </tr>
             </table>
           </div>
@@ -108,11 +117,6 @@
       <hr />
     </section>
     <section aria-details="link">
-      <div class="bigbutton">
-        <a href="contact.html">
-          <h3>ช่องทางการติดต่อ</h3>
-        </a>
-      </div>
       <div class="bigbutton">
         <a href="weekReport-1.html">
           <h3>Week Report-1</h3>
