--- a/weekReport-1.html
+++ b/weekReport-1.html
@@ -4,10 +4,19 @@
 <head>
     <meta charset="utf-8">
     <title>weekReport-1</title>
+    <link rel="stylesheet" href="css/navbar.css">
     <link rel="stylesheet" href="css/button.css">
 </head>
 
-<body>
+<body style="margin:0 ;">
+    <navbar>
+        <h1>Thawatchai Buachan</h1>
+        <nav>
+            <a href="index.html">Home</a>
+            <a href="contact.html">Contact</a>
+            <div class="animation"/>
+        </nav>
+    </navbar>
     <div style="text-align:center">
         <h1>การเขียนสะท้อนตนเองของ นาย ธวัชชัย บัวจันทร์ รหัสนักศึกษา 6352300197</h1>
     </div>
@@ -67,10 +76,6 @@
                 </tr>
             </tbody>
         </table>
-        <hr>
-        <div class="bigbutton">
-            <a href="index.html"><h3>Home</h3></a>
-        </div>
     </div>
 </body>
 
