--- a/contact.html
+++ b/contact.html
@@ -7,18 +7,20 @@
   <link rel="stylesheet" href="css/container.css">
   <link rel="stylesheet" href="css/contact.css">
   <link rel="stylesheet" href="css/button.css">
+  <link rel="stylesheet" href="css/navbar.css">
   <script src="https://kit.fontawesome.com/237bd344eb.js" crossorigin="anonymous"></script>
 </head>
 
 <body class="body-index">
+  <navbar>
+    <h1>Thawatchai Buachan</h1>
+    <nav>
+      <a href="index.html">Home</a>
+      <a href="contact.html">Contact</a>
+      <div class="animation start-contact" />
+    </nav>
+  </navbar>
   <div class="container">
-    <section aria-details="home">
-      <div class="bigbutton">
-        <a href="index.html">
-          <h3>Home</h3>
-        </a>
-      </div>
-    </section>
     <section aria-details="social">
       <div class="block-content">
         <h3>ช่องทางการติดต่อ</h3>
